seaqt/QtMultimedia/gen_qmediaplayercontrol.nim

import ./Qt5Multimedia_libs

{.push raises: [].}

from system/ansi_c import c_free, c_malloc

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt5Multimedia") & " -fPIC"
{.compile("gen_qmediaplayercontrol.cpp", cflags).}


import ./gen_qmediaplayercontrol_types
export gen_qmediaplayercontrol_types

import
  ../QtCore/gen_qiodevice_types,
  ../QtCore/gen_qmetaobject_types,
  ../QtCore/gen_qobject_types,
  ../QtCore/gen_qobjectdefs_types,
  ./gen_qmediacontent_types,
  ./gen_qmediacontrol,
  ./gen_qmediatimerange_types
export
  gen_qiodevice_types,
  gen_qmetaobject_types,
  gen_qobject_types,
  gen_qobjectdefs_types,
  gen_qmediacontent_types,
  gen_qmediacontrol,
  gen_qmediatimerange_types

type cQMediaPlayerControl*{.exportc: "QMediaPlayerControl", incompleteStruct.} = object

proc fcQMediaPlayerControl_metaObject(self: pointer): pointer {.importc: "QMediaPlayerControl_metaObject".}
proc fcQMediaPlayerControl_metacast(self: pointer, param1: cstring): pointer {.importc: "QMediaPlayerControl_metacast".}
proc fcQMediaPlayerControl_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QMediaPlayerControl_metacall".}
proc fcQMediaPlayerControl_tr(s: cstring): struct_miqt_string {.importc: "QMediaPlayerControl_tr".}
proc fcQMediaPlayerControl_trUtf8(s: cstring): struct_miqt_string {.importc: "QMediaPlayerControl_trUtf8".}
proc fcQMediaPlayerControl_state(self: pointer): cint {.importc: "QMediaPlayerControl_state".}
proc fcQMediaPlayerControl_mediaStatus(self: pointer): cint {.importc: "QMediaPlayerControl_mediaStatus".}
proc fcQMediaPlayerControl_duration(self: pointer): clonglong {.importc: "QMediaPlayerControl_duration".}
proc fcQMediaPlayerControl_position(self: pointer): clonglong {.importc: "QMediaPlayerControl_position".}
proc fcQMediaPlayerControl_setPosition(self: pointer, position: clonglong): void {.importc: "QMediaPlayerControl_setPosition".}
proc fcQMediaPlayerControl_volume(self: pointer): cint {.importc: "QMediaPlayerControl_volume".}
proc fcQMediaPlayerControl_setVolume(self: pointer, volume: cint): void {.importc: "QMediaPlayerControl_setVolume".}
proc fcQMediaPlayerControl_isMuted(self: pointer): bool {.importc: "QMediaPlayerControl_isMuted".}
proc fcQMediaPlayerControl_setMuted(self: pointer, mute: bool): void {.importc: "QMediaPlayerControl_setMuted".}
proc fcQMediaPlayerControl_bufferStatus(self: pointer): cint {.importc: "QMediaPlayerControl_bufferStatus".}
proc fcQMediaPlayerControl_isAudioAvailable(self: pointer): bool {.importc: "QMediaPlayerControl_isAudioAvailable".}
proc fcQMediaPlayerControl_isVideoAvailable(self: pointer): bool {.importc: "QMediaPlayerControl_isVideoAvailable".}
proc fcQMediaPlayerControl_isSeekable(self: pointer): bool {.importc: "QMediaPlayerControl_isSeekable".}
proc fcQMediaPlayerControl_availablePlaybackRanges(self: pointer): pointer {.importc: "QMediaPlayerControl_availablePlaybackRanges".}
proc fcQMediaPlayerControl_playbackRate(self: pointer): float64 {.importc: "QMediaPlayerControl_playbackRate".}
proc fcQMediaPlayerControl_setPlaybackRate(self: pointer, rate: float64): void {.importc: "QMediaPlayerControl_setPlaybackRate".}
proc fcQMediaPlayerControl_media(self: pointer): pointer {.importc: "QMediaPlayerControl_media".}
proc fcQMediaPlayerControl_mediaStream(self: pointer): pointer {.importc: "QMediaPlayerControl_mediaStream".}
proc fcQMediaPlayerControl_setMedia(self: pointer, media: pointer, stream: pointer): void {.importc: "QMediaPlayerControl_setMedia".}
proc fcQMediaPlayerControl_play(self: pointer): void {.importc: "QMediaPlayerControl_play".}
proc fcQMediaPlayerControl_pause(self: pointer): void {.importc: "QMediaPlayerControl_pause".}
proc fcQMediaPlayerControl_stop(self: pointer): void {.importc: "QMediaPlayerControl_stop".}
proc fcQMediaPlayerControl_mediaChanged(self: pointer, content: pointer): void {.importc: "QMediaPlayerControl_mediaChanged".}
proc fcQMediaPlayerControl_connect_mediaChanged(self: pointer, slot: int, callback: proc (slot: int, content: pointer) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_mediaChanged".}
proc fcQMediaPlayerControl_durationChanged(self: pointer, duration: clonglong): void {.importc: "QMediaPlayerControl_durationChanged".}
proc fcQMediaPlayerControl_connect_durationChanged(self: pointer, slot: int, callback: proc (slot: int, duration: clonglong) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_durationChanged".}
proc fcQMediaPlayerControl_positionChanged(self: pointer, position: clonglong): void {.importc: "QMediaPlayerControl_positionChanged".}
proc fcQMediaPlayerControl_connect_positionChanged(self: pointer, slot: int, callback: proc (slot: int, position: clonglong) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_positionChanged".}
proc fcQMediaPlayerControl_stateChanged(self: pointer, newState: cint): void {.importc: "QMediaPlayerControl_stateChanged".}
proc fcQMediaPlayerControl_connect_stateChanged(self: pointer, slot: int, callback: proc (slot: int, newState: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_stateChanged".}
proc fcQMediaPlayerControl_mediaStatusChanged(self: pointer, status: cint): void {.importc: "QMediaPlayerControl_mediaStatusChanged".}
proc fcQMediaPlayerControl_connect_mediaStatusChanged(self: pointer, slot: int, callback: proc (slot: int, status: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_mediaStatusChanged".}
proc fcQMediaPlayerControl_volumeChanged(self: pointer, volume: cint): void {.importc: "QMediaPlayerControl_volumeChanged".}
proc fcQMediaPlayerControl_connect_volumeChanged(self: pointer, slot: int, callback: proc (slot: int, volume: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_volumeChanged".}
proc fcQMediaPlayerControl_mutedChanged(self: pointer, mute: bool): void {.importc: "QMediaPlayerControl_mutedChanged".}
proc fcQMediaPlayerControl_connect_mutedChanged(self: pointer, slot: int, callback: proc (slot: int, mute: bool) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_mutedChanged".}
proc fcQMediaPlayerControl_audioAvailableChanged(self: pointer, audioAvailable: bool): void {.importc: "QMediaPlayerControl_audioAvailableChanged".}
proc fcQMediaPlayerControl_connect_audioAvailableChanged(self: pointer, slot: int, callback: proc (slot: int, audioAvailable: bool) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_audioAvailableChanged".}
proc fcQMediaPlayerControl_videoAvailableChanged(self: pointer, videoAvailable: bool): void {.importc: "QMediaPlayerControl_videoAvailableChanged".}
proc fcQMediaPlayerControl_connect_videoAvailableChanged(self: pointer, slot: int, callback: proc (slot: int, videoAvailable: bool) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_videoAvailableChanged".}
proc fcQMediaPlayerControl_bufferStatusChanged(self: pointer, percentFilled: cint): void {.importc: "QMediaPlayerControl_bufferStatusChanged".}
proc fcQMediaPlayerControl_connect_bufferStatusChanged(self: pointer, slot: int, callback: proc (slot: int, percentFilled: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_bufferStatusChanged".}
proc fcQMediaPlayerControl_seekableChanged(self: pointer, seekable: bool): void {.importc: "QMediaPlayerControl_seekableChanged".}
proc fcQMediaPlayerControl_connect_seekableChanged(self: pointer, slot: int, callback: proc (slot: int, seekable: bool) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_seekableChanged".}
proc fcQMediaPlayerControl_availablePlaybackRangesChanged(self: pointer, ranges: pointer): void {.importc: "QMediaPlayerControl_availablePlaybackRangesChanged".}
proc fcQMediaPlayerControl_connect_availablePlaybackRangesChanged(self: pointer, slot: int, callback: proc (slot: int, ranges: pointer) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_availablePlaybackRangesChanged".}
proc fcQMediaPlayerControl_playbackRateChanged(self: pointer, rate: float64): void {.importc: "QMediaPlayerControl_playbackRateChanged".}
proc fcQMediaPlayerControl_connect_playbackRateChanged(self: pointer, slot: int, callback: proc (slot: int, rate: float64) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_playbackRateChanged".}
proc fcQMediaPlayerControl_error(self: pointer, error: cint, errorString: struct_miqt_string): void {.importc: "QMediaPlayerControl_error".}
proc fcQMediaPlayerControl_connect_error(self: pointer, slot: int, callback: proc (slot: int, error: cint, errorString: struct_miqt_string) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QMediaPlayerControl_connect_error".}
proc fcQMediaPlayerControl_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QMediaPlayerControl_tr2".}
proc fcQMediaPlayerControl_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMediaPlayerControl_tr3".}
proc fcQMediaPlayerControl_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QMediaPlayerControl_trUtf82".}
proc fcQMediaPlayerControl_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMediaPlayerControl_trUtf83".}
proc fcQMediaPlayerControl_protectedbase_sender(self: pointer): pointer {.importc: "QMediaPlayerControl_protectedbase_sender".}
proc fcQMediaPlayerControl_protectedbase_senderSignalIndex(self: pointer): cint {.importc: "QMediaPlayerControl_protectedbase_senderSignalIndex".}
proc fcQMediaPlayerControl_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QMediaPlayerControl_protectedbase_receivers".}
proc fcQMediaPlayerControl_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QMediaPlayerControl_protectedbase_isSignalConnected".}
proc fcQMediaPlayerControl_staticMetaObject(): pointer {.importc: "QMediaPlayerControl_staticMetaObject".}

proc metaObject*(self: gen_qmediaplayercontrol_types.QMediaPlayerControl): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQMediaPlayerControl_metaObject(self.h), owned: false)

proc metacast*(self: gen_qmediaplayercontrol_types.QMediaPlayerControl, param1: cstring): pointer =
  fcQMediaPlayerControl_metacast(self.h, param1)

proc metacall*(self: gen_qmediaplayercontrol_types.QMediaPlayerControl, param1: cint, param2: cint, param3: pointer): cint =
  fcQMediaPlayerControl_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qmediaplayercontrol_types.QMediaPlayerControl, s: cstring): string =
  let v_ms = fcQMediaPlayerControl_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qmediaplayercontrol_types.QMediaPlayerControl, s: cstring): string =
  let v_ms = fcQMediaPlayerControl_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc state*(self: gen_qmediaplayercontrol_types.QMediaPlayerControl): cint =
  cint(fcQMediaPlayerControl_state(self.h))
